# LocalMessenger

./: .gitignore  CMakeLists.txt  messenger.sqlite
Client/: CMakeLists.txt  main.cpp  resources.qrc  style.qss
Client/src/: MessengerClient.cpp  MessengerClient.h  main.cpp
Client/src/network/: MessengerClient.cpp  MessengerClient.h
Client/src/ui/admin/: AdminPanelWidget.cpp  AdminPanelWidget.h  CreateUserDialog.cpp  CreateUserDialog.h
Client/src/ui/auth/: AuthWindow.cpp  AuthWindow.h
Client/src/ui/chat/: ChatWindow.cpp  ChatWindow.h
Client/src/ui/settings/: SettingsDialog.cpp  SettingsDialog.h
Server/: CMakeLists.txt  main.cpp
Server/src/: DatabaseManager.cpp  DatabaseManager.h  MessengerServer.cpp  MessengerServer.h
